fix: Reduced logo and burger label sizes on mobile

--- a/wp-content/themes/jourj-theme/blocks/header/styles.scss
+++ b/wp-content/themes/jourj-theme/blocks/header/styles.scss
@@ -132,7 +132,11 @@
 		}
 
 		&__logo {
-			width: 100%;
+			width: 90%;
+		}
+
+		&__burger {
+			font-size: 1rem;
 		}
 	}
 }
